[package]
name = "sbon"
authors = ["Diego Valdez"]
version = "0.1.0"
edition = "2021"
description = "Allows you to interface with the file formats used by the game Starbound."
repository = "https://github.com/DiegoValdez1/sbon-rs"

[lib]

[[bin]]
name="sbon-bin"
path="src/main.rs"

[dependencies]
byteorder = "1.5.0"
thiserror = "1.0.52"